# api/user.go
@@ -1,6 +1,7 @@
 package api
 
 import (
+	"eroauz/conf"
 	"eroauz/models"
 	"eroauz/serializer"
 	"eroauz/service/user"
@@ -51,7 +52,52 @@ func UserLogin(c echo.Context) (err error) {
 			Error:  fmt.Sprint(err)})
 	}
 }
-func VeruftMail(c echo.Context) error {
+
+// EroAPI godoc
+// @Summary 发送用户验证邮件
+// @Description 必须要先从/api/v1/verify 处获取验证码
+// @Tags user
+// @Accept html
+// @Produce json
+// @Success 200 {object} serializer.Response
+// @Failure 500 {object} serializer.Response
+// @Param verify_code query string true "验证码"
+// @Param verify_id query string true "验证码ID"
+// @Router /api/v1/user/sendmail [get]
+func SendMail(c echo.Context) error {
+	verifyID := c.QueryParam("verify_id")
+	verifyCode := c.QueryParam("verify_code")
+	if res := utils.VerfiyCaptcha(verifyID, verifyCode); res == false {
+		return c.JSON(200, &serializer.Response{
+			Status: 403,
+			Msg:    "验证码错误",
+		})
+	}
+	uid := utils.GetAutherID(c)
+	u, err := models.GetUser(uid)
+	if err != nil {
+		return c.JSON(200, &serializer.Response{
+			Status: 404,
+			Msg:    "没有找到该用户",
+			Error:  err.Error()})
+	}
+	if u.Status == models.Inactive {
+		hash := utils.Generate(u.UserName)
+		token := utils.RandStringRunes(16)
+		s := "您的验证地址如下：https://%s/api/v1/user/register?hash=%s&token=%s&user=%s"
+		body := fmt.Sprintf(s, conf.BackEndHost, hash, token, u.UserName)
+		if err := utils.SendToMail(conf.SMTPUSERNAME, conf.SMTPPASSWORD, conf.SMTPHOST, u.Mail, "Ero 注册邮件", body, "html"); err != nil {
+			return c.JSON(200, &serializer.Response{
+				Status: 500,
+				Msg:    "邮件发送失败",
+				Error:  err.Error()})
+		}
+	}
+	return c.JSON(200, &serializer.Response{
+		Status: 0,
+		Msg:    "邮件发送成功"})
+}
+func VerifyMail(c echo.Context) error {
 	token := c.QueryParam("token")
 	s := c.QueryParam("user")
 	hash := c.QueryParam("hash")
